webroot/css/tdtracx.css
.form-group.required .control-label:after {
  content:" *";
  color:red;
}

select[name*="date"], select[name*="time"] { 
	display: inline-block;
	margin-left: 2px;
	margin-right: 2px;
    height: 34px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}

.list-group-item.label-warning { 
	background-color: #f0ad4e;
	color: #fff;
	font-weight: 700;
	font-size: 20px;
}
.list-group-item.label-danger { 
	background-color: #d9534f;
	color: #fff;
	font-weight: 700;
	font-size: 20px;
}
.list-group-item.label-success { 
	background-color: #5cb85c;
	color: #fff;
	font-weight: 700;
	font-size: 20px;
}
.list-group-item.label-primary { 
	background-color: #337ab7;
	color: #fff;
	font-weight: 700;
	font-size: 20px;
}
.list-group-item.label-info { 
	background-color: #5bc0de;
	color: #fff;
	font-weight: 700;
	font-size: 20px;
}

.table-striped>tbody>tr:nth-of-type(odd) {
    background-color: rgb(235,235,235);
}

